add google locator and rough style location details input

--- a/packages/web/public/index.html
+++ b/packages/web/public/index.html
@@ -19,7 +19,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBgKmGRrdd6epx-_CKbHhbJHJii1TcKMkg"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBgKmGRrdd6epx-_CKbHhbJHJii1TcKMkg&libraries=places"></script>
+
     <title>Hero Traveler</title>
   </head>
   <body>
