added meta info for SEO

--- a/packages/web/public/index.html
+++ b/packages/web/public/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="title" content="HeroTraveler.com | For Travelers, By Travelers">
+    <meta name="description" content="Hero Traveler is a new travel media and entertainment platform, powered by a curated community of travel creators and influencers.">
+    <meta property="og:title" content="Hero Traveler" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.herotraveler.com" />
+<!--     <meta property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />
+ -->
+    <meta property="og:description" content="Hero Traveler is a new travel media and entertainment platform, powered by a curated community of travel creators and influencers." />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <!--
