--- a/packages/web/public/index.html
+++ b/packages/web/public/index.html
@@ -7,8 +7,7 @@
     <meta property="og:title" content="Hero Traveler" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.herotraveler.com" />
-<!--     <meta property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />
- -->
+    <meta property="og:image" content="https://res.cloudinary.com/rehash-studio/image/upload/v1542128857/files/open-graph-image.jpg" />
     <meta property="og:description" content="Hero Traveler is a new travel media and entertainment platform, powered by a curated community of travel creators and influencers." />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
