--- a/packages/web/public/index.html
+++ b/packages/web/public/index.html
@@ -81,6 +81,8 @@
       &noscript=1"/>
     </noscript>
     <!-- End Facebook Pixel Code -->
+    <!-- Pinterest Code -->
+    <meta name="p:domain_verify" content="c4e73b3453a546ad9889a38710ed6bd6" />
     <title>Hero Traveler</title>
   </head>
   <body>
